--- a/index.html
+++ b/index.html
@@ -27,13 +27,27 @@
 		<script src="js/skel.min.js"></script>
 		<script src="js/init.js"></script>
 		<script>
-			if (document.webkitFullscreenElement) {
-			  document.webkitCancelFullScreen();
-			} else {
-			  const el = document.documentElement;
-			  el.webkitRequestFullscreen(Element.ALLOW_KEYBOARD_INPUT);
+			/* Get the documentElement (<html>) to display the page in fullscreen */
+			var elem = document.documentElement;
+			
+			/* View in fullscreen */
+			function openFullscreen() {
+			  if (elem.requestFullscreen) {
+				elem.requestFullscreen();
+			  } else if (elem.webkitRequestFullscreen) { /* Safari */
+				elem.webkitRequestFullscreen();
+			  } 
 			}
-		</script>
+			
+			/* Close fullscreen */
+			function closeFullscreen() {
+			  if (document.exitFullscreen) {
+				document.exitFullscreen();
+			  } else if (document.webkitExitFullscreen) { /* Safari */
+				document.webkitExitFullscreen();
+			  } 
+			}
+			</script>
 		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 	</head>
