--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
 		</noscript>
 		<script src="js/skel.min.js"></script>
 		<script src="js/init.js"></script>
+		
+		<script>
+		window.onresize = function() {
+			document.body.height = window.innerHeight;
+		}
+		window.onresize(); // called to initially set the height
+		</script>
 
 		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
