--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 		</noscript>
 		<script src="js/skel.min.js"></script>
 		<script src="js/init.js"></script>
-		
+
 		<script>
 		window.onresize = function() {
-			document.body.height = window.innerHeight;
+			document.body.style.height = window.innerHeight + "px";
 		}
 		window.onresize(); // called to initially set the height
 		</script>
