--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 		<script src="js/init.js"></script>
 
 		<script>
-		window.onresize = function() {
+		window.onload = function() {
 			document.body.style.height = window.innerHeight + "px";
 		}
-		window.onresize(); // called to initially set the height
+		window.onload(); // called to initially set the height
 		</script>
 
 		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
