--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<script>
 			function resetHeight(){
 		// reset the body height to that of the inner browser
-			document.body.style.height = window.innerHeight + "px";
+			document.body.height = window.innerHeight + "px";
 		   }
 	   // reset the height whenever the window's resized
 			window.addEventListener("resize", resetHeight);
