--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 		<noscript>
 			<!-- <link rel="stylesheet" href="css/skel.css" /> -->
-			<link rel="stylesheet" href="css/style.css" />
+			<!-- <link rel="stylesheet" href="css/style.css" /> /-->
 			<!--<link rel="stylesheet" href="css/style-wide.css" />
 			<link rel="stylesheet" href="css/style-noscript.css" />
 			<link rel="stylesheet" href="css/all.min.css"> -->
@@ -28,8 +28,8 @@
 		<script src="js/init.js"></script>
 
 		<style>
-			@media screen and (max-width:375px) {
-				#wrapper {
+			@media screen and (max-width:600px) {
+				#bg {
 				margin-top: env(safe-area-inset-top);
                 margin-left: env(safe-area-inset-left);
                 margin-bottom: env(safe-area-inset-bottom);
@@ -37,17 +37,6 @@
 				}
 			}
 	   </style>
-
-		<script>
-			function resetHeight(){
-		// reset the body height to that of the inner browser
-			document.body.height = window.innerHeight + "px";
-		   }
-	   // reset the height whenever the window's resized
-			window.addEventListener("resize", resetHeight);
-	   // called to initially set the height.
-			resetHeight();
-		</script>
 
 
 
