--- a/index.html
+++ b/index.html
@@ -26,12 +26,11 @@
 		</noscript>
 		<script src="js/skel.min.js"></script>
 		<script src="js/init.js"></script>
-		<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
-        <script type="text/javascript" src="css3-mediaqueries.js"></script>
+
 
 		<style>
 			@media screen and (max-width:600px) {
-				#bg {
+				#wrapper {
 				margin-top: env(safe-area-inset-top);
                 margin-left: env(safe-area-inset-left);
                 margin-bottom: env(safe-area-inset-bottom);
