--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
 			}
 	   </style>
 
+	   <script>
+		$(document,window).on('resize orientationchange webkitfullscreenchange mozfullscreenchange fullscreenchange',  function(){
+
+       }
+      );
+		</script>
+
 
 
 		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
