trying full screen via css

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 		<meta name="keywords" content="Swift, digital, remote, developer, engeneering, apps, designer, animations, SwiftUI" />
 		<meta name="author" content="Marina Huber" />
 		<meta name="viewport" content="initial-scale=0.9, viewport-fit=cover, width=device-width, user-scalable=no"></meta>
- 		<meta name="apple-mobile-web-app-capable" content="yes"></meta>
 		 <meta name="mobile-web-app-capable" content="yes">
+		 <meta name="apple-mobile-web-app-capable" content="yes">
   		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"></meta>
 		<meta name="theme-color" content="#0096c7">
 
@@ -29,14 +29,14 @@
 
 
 		<style>
-			@media screen and (max-width:600px) {
-				#wrapper {
+			@media screen and (max-width: 980px) {
+			/* #wrapper {
 				margin-top: env(safe-area-inset-top);
                 margin-left: env(safe-area-inset-left);
                 margin-bottom: env(safe-area-inset-bottom);
-                margin-right: env(safe-area-inset-right);
-				}
-			}
+                margin-right: env(safe-area-inset-right); 
+				} */
+			} 
 	   </style>
 
 
