--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 
 
 		<style>
+			:-webkit-full-screen {
+  background-color: yellow;
+        }
 			@media screen and (max-width: 980px) {
 			/* #wrapper {
 				margin-top: env(safe-area-inset-top);
