Medium URL update

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 							<li><a href="https://github.com/MarinaHuber" target="_blank"><i class="fab fa-github-square"></i></a></li>
 							<li><a href="https://twitter.com/SerinnahHuber" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
 							<li><a href="https://www.linkedin.com/in/marinahuber" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-							<li><a href="https://medium.com/@huber.marina" target="_blank"><i class="fab fa-medium"></i></a></li>
+							<li><a href="https://medium.com/@huber-marina" target="_blank"><i class="fab fa-medium"></i></a></li>
 				
 							</ul>
 						</nav>
